name:                psg-scheme
version:             0.1.0.0
synopsis:            Scheme interpreter written in Haskell
description:         Scheme interpreter written in Haskell.
license:             BSD3
license-file:        LICENSE
author:              amkkun
maintainer:          amkkun@gmail.com
homepage:            https://github.com/amkkun/psg-scheme
copyright:           amkkun
category:            Language
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type:              git
  location:          git://github.com/amkkun/psg-scheme.git

executable psg-scheme
  main-is:           main.hs
  hs-source-dirs:    src
  ghc-options:       -Wall
                     -fno-warn-unused-do-bind
  other-modules:       Parser
                     , Types
  build-depends:       base ==4.5.*
                     , trifecta >= 1.1
